# hugging_go

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: python.yml
gomill/: .gitignore  Dockerfile  Makefile  playoff.ctl.py
hugging_go/: __main__.py  agent.py  beam_search.py  board.py  board_factory.py  color.py  dataset.py  gtp.py  minimax.py  model.py  sgf.py  tokenizer.py  vertex.py
model/: tokenizer.json
model/checkpoint-2043000/: config.json  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  tokenizer_config.json  trainer_state.json
model/checkpoint-46500/: config.json  generation_config.json  scheduler.pt  trainer_state.json
model/checkpoint-46770/: config.json  generation_config.json  scheduler.pt  tokenizer.json  tokenizer_config.json  trainer_state.json
tests/: test_beam_search.py  test_board.py  test_gtp.py  test_minimax.py  test_model.py  test_sgf.py  test_tokenizer.py  test_vertex.py
