[metadata]
name = hugging_go
version = 0.0.0
author = Karl Sundequist Blomdahl
author_email = karl.sundequist.blomdahl@gmail.com
description = Transformers plays Go
url = https://github.com/kblomdahl/hugging_go
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6
